# git_info

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  check_in_git_repository.py  git_info.hpp.in  git_info.py.in  sub_proc.py
git_info/: CMakeLists.txt  LICENSE  check_in_git_repository.py  create_git_info_header.py  git_info.hpp.in  git_info.py.in
test/: compare_cpp_python_output.sh  test_compile.cpp  test_cpp_compiles.sh  test_git_info.py  test_python_runs.sh
